# adoss

./: pyproject.toml
src/damped_linoss/: train.py
src/damped_linoss/data/: create_dataset.py
src/damped_linoss/data/processed/mode_switch_oscillator/: X_test.pkl  X_val.pkl  regime_test.pkl  target_damping_test.pkl  velocity_test.pkl  y_test.pkl  y_val.pkl
src/damped_linoss/data/processed/synthetic_regression_switch/: X_test.pkl  X_val.pkl  flush_latent_test.pkl  long_latent_test.pkl  mid_latent_test.pkl  regime_test.pkl  y_test.pkl  y_train.pkl  y_val.pkl
src/damped_linoss/data/processed/synthetic_regression_tv/: X_test.pkl  X_val.pkl  control_test.pkl  lambda_test.pkl  long_latent_test.pkl  query_test.pkl  short_latent_test.pkl  y_test.pkl  y_train.pkl  y_val.pkl
src/damped_linoss/data/processed/write_hold_erase_query/: cmd_test.pkl  y_test.pkl  y_val.pkl
src/damped_linoss/data/processed/write_hold_reset/: y_test.pkl  y_val.pkl
src/damped_linoss/models/: LinOSS.py  block_deer.py  create_model.py
src/damped_linoss/scripts/: create_experiment.py  create_mode_switch_oscillator_data.py  create_switch_regression_data.py  create_tv_decay_data.py  create_write_hold_erase_query_data.py  create_write_hold_reset_data.py  eval_mode_switch_oscillator.py  eval_tv_regression_by_regime.py  eval_write_hold_erase_query.py  plot_spectral_trajectories.py  plot_task_spectral_schedules.py  run_inference.py
src/experiments-D-IMEX1/D-LinOSS-IMEX1-RT-Last/Adding500/run_000/: metadata.txt  model.eqx  state.eqx
src/experiments/ConstD-S012-LinOSS-IMEX1/MNIST/run_000/: model.eqx  (+3 more)
(+516 files in other folders)
