[project]
name = "damped_linoss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.13.0",
    "jax>=0.6.2; sys_platform == 'darwin' or sys_platform == 'win32'",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
    "matplotlib>=3.10.5",
    "optax>=0.2.5",
    "pyyaml>=6.0.2",
    "sktime>=0.38.4",
]
